# pi-controller

./: .gitignore  GEMINI.md  README.md  config.json  go.mod  go.sum  install.sh  pi-controller.service  publickey.pem  uninstall.sh
cmd/pi-controller/: main.go  telemetry.go
cmd/runner/: main.go
cmd/updater/: main.go
docker/: docker-compose.yml  loki-config.yaml
docker/kiosk/: Dockerfile  start.sh
docker/wifi-connect/: Dockerfile
pkg/: GEMINI.md  docker-compose-test.yaml  otel-collector-config.yaml  run_test_compose.sh
pkg/google_login_steps/: .gitignore  GEMINI.md  account_login_step1_after_passkey_dump.html  account_login_step1_before_dump.html  account_login_step1_dropdown_dump.html  account_login_validation_complete_dump.html  account_login_validation_dump.html  account_login_validation_try_another_way_dump.html  account_login_validation_verifying_dump.html  main.go  meet_access_dump.html  page_dump.html  parse.js  parse_options.js
pkg/kiosk/: Dockerfile  release.sh  start.sh
pkg/kiosk_debug/: .gitignore  Dockerfile  run_debug_kiosk.sh  start.sh
pkg/lgtm/: tempo-config.yaml
pkg/logger/: logger.go
pkg/lounge_display/: .gitignore  Dockerfile  GEMINI.MD  GEMINI.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  release.sh  run.sh  start.sh
pkg/lounge_display/browser/: browser.go  fake_browser.go
pkg/lounge_display/calendarclient/: calendar.go
pkg/token_receiver/: Cargo.toml  Dockerfile  docker-compose.yaml  release.sh  test.sh
pkg/wifi-connect/: Dockerfile  release.sh
scripts/: release.sh  validate_release.go
(+82 files in other folders)
