[package]
name = "token_receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
axum = "0.7.9"
iroh = "0.31.0"
iroh-base = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "receiver"
path = "src/bin/receiver.rs"
